Fix spacing between fields.

--- a/src/components/newTasks/newTasks.css
+++ b/src/components/newTasks/newTasks.css
@@ -17,7 +17,7 @@ form .wrapper {
 }
 
 fieldset {
-  margin: 3rem 0;
+  margin: 5rem 0;
   border: none;
   padding: 0;
 }
